# Entry Points for PyInstaller
[options.entry_points]
pyinstaller40 =
    hook-dirs = libusb_package.__pyinstaller:get_hook_dirs

[metadata]
name = libusb-package
description = Package containing libusb so it can be installed via Python package managers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyocd/libusb-package
author = Chris Reed
author_email = flit@me.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Hardware :: Universal Serial Bus (USB)
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/pyocd/libusb-package/issues
    Discussions = https://github.com/pyocd/libusb-package/discussions
    Changelog = https://github.com/pyocd/libusb-package/releases


[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False
install_requires =
    importlib_resources

[options.packages.find]
where = src
